k3s/apps/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.elaine.pw`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: cloudflare
